--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -15,7 +15,7 @@
     </button>
 
     <div class="c-header-brand">
-      <strong>Sistema de Vendas PDV Web</strong>
+      <strong>Sistema amburgeria Web</strong>
     </div>
   </header>
 
@@ -24,7 +24,7 @@
   </div>
   <!-- //footer inicio -->
   <footer class="esp-top-20">
-    <mat-card>Copyright © 2022 <span>Leandro Nazareth</span> - Projeto: Java 11 - Angular 12</mat-card>
+    <mat-card>Copyright © 2023 <span>Jonas</span> - Projeto: Java 11 - Angular 12</mat-card>
   </footer>
   <!-- //footer fim -->
 
