--- a/src/app/dashboard/sidebar/sidebar.component.html
+++ b/src/app/dashboard/sidebar/sidebar.component.html
@@ -9,10 +9,26 @@
     </li>
 
     <li class="c-sidebar-nav-item">
-        <a class="c-sidebar-nav-link" matRipple routerLink="product" routerLinkActive="c-active">
+        <a class="c-sidebar-nav-link" matRipple routerLink="produto" routerLinkActive="c-active">
             <i class="c-sidebar-nav-icon">
                 <mat-icon>splitscreen</mat-icon>
             </i> Produto
+        </a>
+    </li>
+
+    <li class="c-sidebar-nav-item">
+        <a class="c-sidebar-nav-link" matRipple routerLink="cliente" routerLinkActive="c-active">
+            <i class="c-sidebar-nav-icon">
+                <mat-icon>splitscreen</mat-icon>
+            </i> Cliente
+        </a>
+    </li>
+
+    <li class="c-sidebar-nav-item">
+        <a class="c-sidebar-nav-link" matRipple routerLink="funcionario" routerLinkActive="c-active">
+            <i class="c-sidebar-nav-icon">
+                <mat-icon>splitscreen</mat-icon>
+            </i> Funcionario
         </a>
     </li>
 
