--- a/src/app/page/funcionario/funcionario.component.html
+++ b/src/app/page/funcionario/funcionario.component.html
@@ -1,1 +1,166 @@
-<p>funcionario works!</p>
+<main class="c-main">
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-md-12"></div>
+            <!-- ngFor para percorrer o array de erros e, se houver erros, imprimir na tela -->
+            <div class="alert alert-danger" role="alert" *ngFor="let erro of mensagemErros">
+                {{ erro }}
+            </div>
+        </div>
+        <div class="mat-elevation-z8">
+            <mat-card>
+                <mat-card-title>
+                    <mat-icon>color_lens</mat-icon>
+                    Funcionarios
+                </mat-card-title>
+                <mat-tab-group mat-align-tabs="start" #tabGroup>
+                    <mat-tab>
+                        <ng-template mat-tab-label>
+                            <mat-icon>add</mat-icon>
+                            Cadastrar funcionarios
+                        </ng-template>
+                        <!-- CADASTRANDO OBJETO INÍCIO -->
+                        <mat-card>
+                            <form [formGroup]="formulario" (submit)="submit()" *ngIf="formulario">
+                                <!-- passa qual é o formulário e o evento -->
+                                <mat-form-field class="full-width">
+                                    <mat-label>ID</mat-label>
+                                    <input formControlName="id" matInput readonly>
+                                </mat-form-field>
+
+                                <mat-form-field class="full-width" appearance="fill">
+                                    <mat-label>Nome</mat-label>
+                                    <input formControlName="nome" matInput placeholder="Digite seu nome" minlength="3"
+                                        maxlength="50" required>
+                                </mat-form-field>
+
+                                <mat-form-field class="full-width" appearance="fill">
+                                    <mat-label>idade</mat-label>
+                                    <input formControlName="idade" matInput placeholder="Digite sua idade" minlength="1"
+                                        maxlength="3" required type="number">
+                                </mat-form-field>
+
+                                <mat-form-field class="full-width" appearance="fill">
+                                    <mat-label>telefone</mat-label>
+                                    <input formControlName="telefone" matInput placeholder="Digite seu telefone">
+                                </mat-form-field>
+
+                                <mat-form-field class="full-width" appearance="fill">
+                                    <mat-label>Senha</mat-label>
+                                    <input type="password" formControlName="senha" matInput placeholder="Digite sua senha" minlength="3"
+                                        maxlength="50" required>
+                                </mat-form-field>
+
+                                <mat-form-field class="full-width" appearance="fill">
+                                    <mat-label>Email</mat-label>
+                                    <input formControlName="email" matInput placeholder="Digite seu email" minlength="3"
+                                        maxlength="50" required>
+                                </mat-form-field>
+
+
+                                <div class="row justify-content-between">
+                                    <div class="col-6">
+                                        <!-- habilita/desabilita botão com o formulário validado -->
+                                        <button type="button" (click)="montarFormulario()" mat-raised-button>
+                                            <mat-icon>insert_drive_file</mat-icon>
+                                            Limpar
+                                        </button>
+                                    </div>
+                                    <div class="col-6" align="right">
+                                        <!-- habilita/desabilita botão com o formulário validado -->
+                                        <button [disabled]="!formulario?.valid" mat-raised-button color="primary">
+                                            <mat-icon>save</mat-icon>
+                                            Salvar
+                                        </button>
+                                    </div>
+                                </div>
+                            </form>
+                        </mat-card>
+                    </mat-tab>
+                    <!-- CADASATRANDO OBJETO INICIO -->
+
+                <!-- LISTANDO TODAS INÍCIO -->
+                <mat-tab>
+                    <ng-template mat-tab-label>
+                        <mat-icon>list</mat-icon>
+                        Listar funcionarios
+                    </ng-template>
+                    <mat-card>
+                        <!-- início da tabela -->
+                        <table mat-table [dataSource]="funcionarios" class="full-width">
+                            <!-- Coluna ID -->
+                            <ng-container matColumnDef="id">
+                                <th mat-header-cell *matHeaderCellDef> ID </th>
+                                <td mat-cell *matCellDef="let funcionario"> {{ funcionario.id }} </td>
+                            </ng-container>
+
+                            <!-- Coluna Nome -->
+                            <ng-container matColumnDef="nome">
+                                <th mat-header-cell *matHeaderCellDef> Nome </th>
+                                <td mat-cell *matCellDef="let funcionario"> {{ funcionario.nome }} </td>
+                            </ng-container>
+
+                             <!-- Coluna idade -->
+                             <ng-container matColumnDef="idade">
+                                <th mat-header-cell *matHeaderCellDef> Idade </th>
+                                <td mat-cell *matCellDef="let funcionario"> {{ funcionario.idade }} </td>
+                            </ng-container>
+
+                            <!-- Coluna telefone -->
+                            <ng-container matColumnDef="telefone">
+                                <th mat-header-cell *matHeaderCellDef> Telefone </th>
+                                <td mat-cell *matCellDef="let funcionario"> {{ funcionario.telefone }} </td>
+                            </ng-container>
+
+                            <!-- Coluna senha -->
+                            <ng-container matColumnDef="senha">
+                                <th mat-header-cell *matHeaderCellDef>senha</th>
+                                <td mat-cell *matCellDef="let funcionario"> {{ funcionario.senha }} </td>
+                            </ng-container>
+
+                              <!-- Coluna email -->
+                              <ng-container matColumnDef="email">
+                                <th mat-header-cell *matHeaderCellDef>email</th>
+                                <td mat-cell *matCellDef="let funcionario"> {{ funcionario.email }} </td>
+                            </ng-container>
+
+                            <!-- coluna excluir -->
+                            <ng-container matColumnDef="excluir">
+                                <th mat-header-cell *matHeaderCellDef>Excluir</th>
+                                <td mat-cell *matCellDef="let funcionario">
+                                    <button (click)="openDialog(funcionario.id)" mat-icon-button color="warn">
+                                        <mat-icon>delete</mat-icon>
+                                    </button>
+                                </td>
+                            </ng-container>
+
+                            <!-- coluna editar -->
+                            <ng-container matColumnDef="editar">
+                                <th mat-header-cell *matHeaderCellDef>Editar</th>
+                                <td mat-cell *matCellDef="let funcionario">
+                                    <button (click)="editar(funcionario.id); tabGroup.selectedIndex = 0"
+                                        mat-icon-button color="accent">
+                                        <mat-icon>edit</mat-icon>
+                                    </button>
+                                </td>
+                            </ng-container>
+
+                            <!-- definir como serão as linhas e a ordem das colunas -->
+                            <tr mat-header-row *matHeaderRowDef="ordemColunasTabela"></tr>
+                            <tr mat-row *matRowDef="let row; columns: ordemColunasTabela;"></tr>
+                        </table>
+
+                        <!-- paginação -->
+                        <mat-paginator [length]="totalElementos" [pageSize]="tamanho"
+                            [pageSizeOptions]="pageSizeOptions" (page)="paginar($event)">
+                            <!-- evento de paginação -->
+                        </mat-paginator>
+
+                    </mat-card>
+                </mat-tab>
+                <!-- LISTANDO TODAS FIM -->
+            </mat-tab-group>
+        </mat-card>
+        </div>
+    </div>
+</main>
