--- a/src/app/page/sales-list/sales-list.component.html
+++ b/src/app/page/sales-list/sales-list.component.html
@@ -2,7 +2,11 @@
     <div class="container-fluid">
         <div class="row">
             <div class="col-md-12"></div>
-            <div class="alert alert-danger" role="alert" *ngFor="let erro of mensagemErros">
+            <div
+                class="alert alert-danger"
+                role="alert"
+                *ngFor="let erro of mensagemErros"
+            >
                 {{ erro }}
             </div>
         </div>
@@ -14,56 +18,72 @@
                 </mat-card-title>
                 <mat-card>
                     <!-- //inicio da tabela -->
-                    <table mat-table [dataSource]="sales" class="full-width">
-                        <!-- Coluna ID -->
+                    <mat-table #table [dataSource]="sales">
+                        <!--- Note that these columns can be defined in any order.
+                            The actual rendered columns are set as a property on the row definition" -->
+                
+                        <!-- Position Column -->
                         <ng-container matColumnDef="id">
-                            <th mat-header-cell *matHeaderCellDef> ID </th>
-                            <td mat-cell *matCellDef="let sale"> {{ sale.id }} </td>
+                            <mat-header-cell *matHeaderCellDef> ID </mat-header-cell>
+                            <mat-cell *matCellDef="let element">
+                                {{ element.id }}
+                            </mat-cell>
                         </ng-container>
-
-                        <!-- Coluna Nome -->
+                
+                        <!-- Name Column -->
                         <ng-container matColumnDef="amount">
-                            <th mat-header-cell *matHeaderCellDef> Cobrado </th>
-                            <td mat-cell *matCellDef="let sale"> {{ sale.amount | currency:'BRL'}} </td>
+                            <mat-header-cell *matHeaderCellDef> Valor </mat-header-cell>
+                            <mat-cell *matCellDef="let element"> {{getTotal(element.itens) | currency:'BRL'}} </mat-cell>
                         </ng-container>
-
-                        <!-- Coluna preco -->
-                        <ng-container matColumnDef="amountPaid">
-                            <th mat-header-cell *matHeaderCellDef>Pago</th>
-                            <td mat-cell *matCellDef="let sale"> {{ sale.amountPaid | currency:'BRL'}} </td>
-                        </ng-container>
-
-                        <!-- Coluna preco -->
-                        <ng-container matColumnDef="difference">
-                            <th mat-header-cell *matHeaderCellDef>Troco</th>
-                            <td mat-cell *matCellDef="let sale"> {{ sale.difference | currency:'BRL'}} </td>
-                        </ng-container>
-
+                
+                        <!-- Weight Column -->
                         <ng-container matColumnDef="payment">
-                            <th mat-header-cell *matHeaderCellDef> Pagamento </th>
-                            <td mat-cell *matCellDef="let sale"> {{ sale.payment }} </td>
+                            <mat-header-cell *matHeaderCellDef> Pagamento </mat-header-cell>
+                            <mat-cell *matCellDef="let element">
+                                {{ element.momentoPedido | date:'dd/MM/yyyy HH:mm' }}
+                            </mat-cell>
                         </ng-container>
-
-                        <ng-container matColumnDef="excluir">
-                            <th mat-header-cell *matHeaderCellDef>Excluir</th>
-                            <td mat-cell *matCellDef="let sale">
-                                <button (click)="openDialog(sale.id)" mat-icon-button color="warn">
-                                    <mat-icon>delete</mat-icon>
-                                </button>
-                            </td>
+                
+                        <!-- Expanded Content Column - The detail row is made up of this one column -->
+                        <ng-container matColumnDef="expandedDetail">
+                            <mat-cell *matCellDef="let detail">
+                                    <ng-container *ngFor="let produto of detail.element.itens">
+                                       {{produto.quantidade}}x {{produto.produto.nome}} = {{produto.quantidade * produto.preco | currency:'BRL'}}
+                                       <br>
+                                    </ng-container>
+                                </mat-cell>
                         </ng-container>
-
-                        <!-- definir como vai ser as linhas e a ordem das colunas -->
-                        <tr mat-header-row *matHeaderRowDef="ordemColunasTabela"></tr>
-                        <tr mat-row *matRowDef="let row; columns: ordemColunasTabela;"></tr>
-                    </table>
-
+                
+                        <mat-header-row *matHeaderRowDef="ordemColunasTabela"></mat-header-row>
+                        <mat-row
+                            *matRowDef="let row; columns: ordemColunasTabela;"
+                            matRipple
+                            class="element-row"
+                            [class.expanded]="expandedElement == row"
+                            (click)="expand(row)"
+                        ></mat-row>
+                        <mat-row
+                            *matRowDef="
+                                let row;
+                                columns: ['expandedDetail'];
+                                when: isExpansionDetailRow
+                            "
+                            [@detailExpand]="
+                                row.element == expandedElement ? 'expanded' : 'collapsed'
+                            "
+                            style="overflow: hidden"
+                        >
+                        </mat-row>
+                    </mat-table>
                     <!-- paginação -->
-                    <mat-paginator [length]="totalElementos" [pageSize]="tamanho" [pageSizeOptions]="pageSizeOptions"
-                        (page)="paginar($event)">
+                    <mat-paginator
+                        [length]="totalElementos"
+                        [pageSize]="tamanho"
+                        [pageSizeOptions]="pageSizeOptions"
+                        (page)="paginar($event)"
+                    >
                         <!-- evento de paginar -->
                     </mat-paginator>
-
                 </mat-card>
             </mat-card>
         </div>
