--- a/src/app/page/produto/produto.component.html
+++ b/src/app/page/produto/produto.component.html
@@ -3,7 +3,11 @@
         <div class="row">
             <div class="col-md-12"></div>
             <!-- ngFor para percorrer o array de erros e, se houver erros, imprimir na tela -->
-            <div class="alert alert-danger" role="alert" *ngFor="let erro of mensagemErros">
+            <div
+                class="alert alert-danger"
+                role="alert"
+                *ngFor="let erro of mensagemErros"
+            >
                 {{ erro }}
             </div>
         </div>
@@ -21,42 +25,87 @@
                         </ng-template>
                         <!-- CADASTRANDO OBJETO INÍCIO -->
                         <mat-card>
-                            <form [formGroup]="formulario" (ngSubmit)="submit()">
+                            <form
+                                *ngIf="formulario"
+                                [formGroup]="formulario"
+                                (ngSubmit)="submit()"
+                            >
                                 <!-- passa qual é o formulário e o evento -->
-                                <mat-form-field class="full-width" formControlName="id">
+                                <mat-form-field
+                                    class="full-width"
+                                    formControlName="id"
+                                >
                                     <mat-label>ID</mat-label>
-                                    <input formControlName="id" matInput readonly>
+                                    <input
+                                        formControlName="id"
+                                        matInput
+                                        readonly
+                                    />
                                 </mat-form-field>
 
-                                <mat-form-field class="full-width" appearance="fill">
+                                <mat-form-field
+                                    class="full-width"
+                                    appearance="fill"
+                                >
                                     <mat-label>Nome</mat-label>
-                                    <input formControlName="nome" matInput placeholder="Digite seu nome">
+                                    <input
+                                        formControlName="nome"
+                                        matInput
+                                        placeholder="Digite seu nome"
+                                    />
                                 </mat-form-field>
 
-                                <mat-form-field class="full-width" appearance="fill" >
+                                <mat-form-field
+                                    class="full-width"
+                                    appearance="fill"
+                                >
                                     <mat-label>Descrição do produto</mat-label>
-                                    <input matInput placeholder="Descrição" formControlName="descricao">
-                                  </mat-form-field>
+                                    <input
+                                        matInput
+                                        placeholder="Descrição"
+                                        formControlName="descricao"
+                                    />
+                                </mat-form-field>
 
-                                <mat-form-field class="full-width" appearance="fill">
+                                <mat-form-field
+                                    class="full-width"
+                                    appearance="fill"
+                                >
                                     <mat-label>Preço</mat-label>
                                     <span matPrefix>R$ &nbsp;</span>
-                                    <input matInput formControlName="preco" mask="separator.2" thousandSeparator="."
-                                        placeholder="1.00,00" minlength="1" maxlength="6" required>
-
+                                    <input
+                                        matInput
+                                        formControlName="preco"
+                                        mask="separator.2"
+                                        thousandSeparator="."
+                                        placeholder="1.00,00"
+                                        minlength="1"
+                                        maxlength="6"
+                                        required
+                                    />
                                 </mat-form-field>
 
                                 <div class="row justify-content-between">
                                     <div class="col-6">
                                         <!-- habilita/desabilita botão com o formulário validado -->
-                                        <button type="button" (click)="limparFormulario()" mat-raised-button>
-                                            <mat-icon>insert_drive_file</mat-icon>
+                                        <button
+                                            type="button"
+                                            (click)="montarFormulario()"
+                                            mat-raised-button
+                                        >
+                                            <mat-icon
+                                                >insert_drive_file</mat-icon
+                                            >
                                             Limpar
                                         </button>
                                     </div>
                                     <div class="col-6" align="right">
                                         <!-- habilita/desabilita botão com o formulário validado -->
-                                        <button [disabled]="!formulario.valid" mat-raised-button color="primary">
+                                        <button
+                                            [disabled]="!formulario.valid"
+                                            mat-raised-button
+                                            color="primary"
+                                        >
                                             <mat-icon>save</mat-icon>
                                             Salvar
                                         </button>
@@ -67,76 +116,122 @@
                     </mat-tab>
                     <!-- CADASATRANDO OBJETO INICIO -->
 
-                <!-- LISTANDO TODAS INÍCIO -->
-                <mat-tab>
-                    <ng-template mat-tab-label>
-                        <mat-icon>list</mat-icon>
-                        Listar produtos
-                    </ng-template>
-                    <mat-card>
-                        <!-- início da tabela -->
-                        <table mat-table [dataSource]="produtos" class="full-width">
-                            <!-- Coluna ID -->
-                            <ng-container matColumnDef="id">
-                                <th mat-header-cell *matHeaderCellDef> ID </th>
-                                <td mat-cell *matCellDef="let produtos"> {{ produtos.id }} </td>
-                            </ng-container>
+                    <!-- LISTANDO TODAS INÍCIO -->
+                    <mat-tab>
+                        <ng-template mat-tab-label>
+                            <mat-icon>list</mat-icon>
+                            Listar produtos
+                        </ng-template>
+                        <mat-card>
+                            <!-- início da tabela -->
+                            <table
+                                mat-table
+                                [dataSource]="produtos"
+                                class="full-width"
+                            >
+                                <!-- Coluna ID -->
+                                <ng-container matColumnDef="id">
+                                    <th mat-header-cell *matHeaderCellDef>
+                                        ID
+                                    </th>
+                                    <td mat-cell *matCellDef="let produtos">
+                                        {{ produtos.id }}
+                                    </td>
+                                </ng-container>
 
-                            <!-- Coluna Nome -->
-                            <ng-container matColumnDef="nome">
-                                <th mat-header-cell *matHeaderCellDef> Nome </th>
-                                <td mat-cell *matCellDef="let produtos"> {{ produtos.nome }} </td>
-                            </ng-container>
+                                <!-- Coluna Nome -->
+                                <ng-container matColumnDef="nome">
+                                    <th mat-header-cell *matHeaderCellDef>
+                                        Nome
+                                    </th>
+                                    <td mat-cell *matCellDef="let produtos">
+                                        {{ produtos.nome }}
+                                    </td>
+                                </ng-container>
 
-                            <!-- Coluna descrição -->
-                            <ng-container matColumnDef="descricao">
-                                <th mat-header-cell *matHeaderCellDef> Descrição </th>
-                                <td mat-cell *matCellDef="let produtos"> {{ produtos.descricao }} </td>
-                            </ng-container>
+                                <!-- Coluna descrição -->
+                                <ng-container matColumnDef="descricao">
+                                    <th mat-header-cell *matHeaderCellDef>
+                                        Descrição
+                                    </th>
+                                    <td mat-cell *matCellDef="let produtos">
+                                        {{ produtos.descricao }}
+                                    </td>
+                                </ng-container>
 
-                            <!-- Coluna preco -->
-                            <ng-container matColumnDef="preco">
-                                <th mat-header-cell *matHeaderCellDef>Preço</th>
-                                <td mat-cell *matCellDef="let produtos"> {{ produtos.preco | currency:'BRL'}} </td>
-                            </ng-container>
+                                <!-- Coluna preco -->
+                                <ng-container matColumnDef="preco">
+                                    <th mat-header-cell *matHeaderCellDef>
+                                        Preço
+                                    </th>
+                                    <td mat-cell *matCellDef="let produtos">
+                                        {{ produtos.preco | currency : "BRL" }}
+                                    </td>
+                                </ng-container>
 
-                            <!-- coluna excluir -->
-                            <ng-container matColumnDef="excluir">
-                                <th mat-header-cell *matHeaderCellDef>Excluir</th>
-                                <td mat-cell *matCellDef="let produtos">
-                                    <button (click)="openDialog(produtos.id)" mat-icon-button color="warn">
-                                        <mat-icon>delete</mat-icon>
-                                    </button>
-                                </td>
-                            </ng-container>
+                                <!-- coluna excluir -->
+                                <ng-container matColumnDef="excluir">
+                                    <th mat-header-cell *matHeaderCellDef>
+                                        Excluir
+                                    </th>
+                                    <td mat-cell *matCellDef="let produtos">
+                                        <button
+                                            (click)="openDialog(produtos.id)"
+                                            mat-icon-button
+                                            color="warn"
+                                        >
+                                            <mat-icon>delete</mat-icon>
+                                        </button>
+                                    </td>
+                                </ng-container>
 
-                            <!-- coluna editar -->
-                            <ng-container matColumnDef="editar">
-                                <th mat-header-cell *matHeaderCellDef>Editar</th>
-                                <td mat-cell *matCellDef="let produtos">
-                                    <button (click)="editar(produtos.id); tabGroup.selectedIndex = 0"
-                                        mat-icon-button color="accent">
-                                        <mat-icon>edit</mat-icon>
-                                    </button>
-                                </td>
-                            </ng-container>
+                                <!-- coluna editar -->
+                                <ng-container matColumnDef="editar">
+                                    <th mat-header-cell *matHeaderCellDef>
+                                        Editar
+                                    </th>
+                                    <td mat-cell *matCellDef="let produtos">
+                                        <button
+                                            (click)="
+                                                editar(produtos.id);
+                                                tabGroup.selectedIndex = 0
+                                            "
+                                            mat-icon-button
+                                            color="accent"
+                                        >
+                                            <mat-icon>edit</mat-icon>
+                                        </button>
+                                    </td>
+                                </ng-container>
 
-                            <!-- definir como serão as linhas e a ordem das colunas -->
-                            <tr mat-header-row *matHeaderRowDef="ordemColunasTabela"></tr>
-                            <tr mat-row *matRowDef="let row; columns: ordemColunasTabela;"></tr>
-                        </table>
+                                <!-- definir como serão as linhas e a ordem das colunas -->
+                                <tr
+                                    mat-header-row
+                                    *matHeaderRowDef="ordemColunasTabela"
+                                ></tr>
+                                <tr
+                                    mat-row
+                                    *matRowDef="
+                                        let row;
+                                        columns: ordemColunasTabela
+                                    "
+                                ></tr>
+                            </table>
 
-                        <!-- paginação -->
-                        <mat-paginator [length]="totalElementos" [pageSize]="tamanho"
-                            [pageSizeOptions]="pageSizeOptions" (page)="paginar($event)">
-                            <!-- evento de paginação -->
-                        </mat-paginator>
-
-                    </mat-card>
-                </mat-tab>
-                <!-- LISTANDO TODAS FIM -->
-            </mat-tab-group>
-        </mat-card>
+                            <!-- paginação -->
+                            <mat-paginator
+                                [length]="totalElementos"
+                                [pageSize]="tamanho"
+                                [pageSizeOptions]="pageSizeOptions"
+                                (page)="paginar($event)"
+                            >
+                                <!-- evento de paginação -->
+                            </mat-paginator>
+                        </mat-card>
+                    </mat-tab>
+                    <!-- LISTANDO TODAS FIM -->
+                </mat-tab-group>
+            </mat-card>
+        </div>
     </div>
-</div>
 </main>
