better visualization of product price

--- a/src/app/page/cliente/cliente.component.html
+++ b/src/app/page/cliente/cliente.component.html
@@ -131,7 +131,7 @@
                                     <div class="col-6" align="right">
                                         <!-- habilita/desabilita botão com o formulário validado -->
                                         <button
-                                            [disabled]="!formulario?.valid"
+                                            [disabled]="!formulario.valid"
                                             mat-raised-button
                                             color="primary"
                                         >
