--- a/src/app/page/produto/produto.component.html
+++ b/src/app/page/produto/produto.component.html
@@ -31,10 +31,7 @@
                                 (ngSubmit)="submit()"
                             >
                                 <!-- passa qual é o formulário e o evento -->
-                                <mat-form-field
-                                    class="full-width"
-                                    formControlName="id"
-                                >
+                                <mat-form-field class="full-width">
                                     <mat-label>ID</mat-label>
                                     <input
                                         formControlName="id"
